# itvx

./: .env.example  .gitignore  InterviewX - AI Phỏng vấn Sơ bộ  & Tuyển dụng Thông minh.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/api/: __init__.py  deps.py
backend/src/models/: __init__.py  background_job.py  base.py  cv.py  interview.py  jd.py  user.py
backend/src/schemas/: __init__.py  auth.py  cv.py  interview.py  jd.py  user.py
backend/src/scripts/: backfill_cv_screening_payloads.py  dev_api_and_worker.sh  launch_interview_worker.sh  migrate_background_jobs.py  migrate_interview_feedback_loop.py  migrate_interview_runtime.py  run_background_jobs.py  run_interview_worker_service.sh  run_local_interview_worker.sh
backend/src/services/: __init__.py  auth_service.py  background_jobs.py  company_knowledge_parser.py  company_knowledge_retriever.py  company_knowledge_service.py  cv_extractor.py  cv_screening_service.py  datetime_utils.py  file_storage.py  interview_answer_evaluator_service.py  interview_feedback_service.py  interview_plan_service.py  interview_runtime_service.py  interview_session_service.py  interview_summary_service.py  interview_worker_launcher.py  jd_extractor.py  jd_service.py  jwt_service.py  livekit_service.py
backend/tests/: conftest.py
backend/tests/api/: test_cv_api.py  test_interview_api.py  test_jd_api.py
backend/tests/schemas/: test_cv_schema.py  test_interview_schema.py  test_jd_schema.py
backend/tests/services/: test_file_storage.py  (+7 more)
worker/: README.runtime.md  pyproject.toml
worker/src/: agent.py  backend_client.py  config.py  worker_server.py
worker/tests/: test_agent_smoke.py  test_backend_client.py
(+138 files in other folders)
