[project]
name = "interviewx-worker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "httpx>=0.28.0",
  "google-genai>=1.0.0",
  "livekit-agents[silero,google]~=1.4",
  "pydantic>=2.10.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
